Fix another false-positive contrast error

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,6 +1,7 @@
 @import "../../variables.scss";
 
 .header {
+  background-color: $color-primary;
   background-image: linear-gradient(135deg, $color-primary, $color-secondary);
 
   padding-top: 50px;
